# bpetite

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  setup-hooks.sh
.claude/skills/artifact-schema/: SKILL.md
.claude/skills/bpe-algorithm/: SKILL.md
.claude/skills/bpetite-conventions/: SKILL.md
.claude/skills/bpetite-tech-writer/: SKILL.md
.claude/skills/cli-contract/: SKILL.md
.claude/skills/commitall/: SKILL.md
.claude/skills/pytest-conventions/: SKILL.md
.claude/skills/readme-writer/: SKILL.md
.claude/skills/readme-writer/references/: banned-patterns.md  repo-ia.md
.claude/skills/rich-cli/: SKILL.md
.claude/skills/task-executor/: SKILL.md
.github/: CODEOWNERS  dependabot.yml  labeler.yml  labels.yml  pull_request_template.md
.github/actions/detect-changes/: action.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: build.yml  ci-meta.yml  cli-smoke.yml  codeql.yml  dependency-review.yml  determinism.yml  format.yml  import-smoke.yml  labels-sync.yml  lint.yml  pages.yml  policy-guard.yml  pr-labeler.yml  pr-status-comment.yml  syntax.yml  tests.yml  tracked-required.json  types.yml
docs/: benchmarks.md  bpetite-prd-v2.md  bpetite-task-list.md  hooks.md
docs/phase-2/: core-algorithm.md  fixtures.md  index.md  persistence.md
docs/phase-3/: encode-decode.md  index.md  public-api.md  roundtrip-suite.md
docs/phase-4/: benchmark-harness.md  cli-contract.md  index.md  rich-presentation.md
docs/site/: build.py
docs/site/assets/css/: animations.css  base.css  code.css  doc.css  landing.css  tokens.css
docs/site/content/: overview.md  why.md
docs/site/templates/: base.html  doc.html  landing.html
scripts/: bench_encode.py  commitall.sh  download_corpus.py  download_data.sh
scripts/ci/: build_status_comment.py  check_determinism.py  detect_changes.py
scripts/hooks/: _ui.py  forbid_core_networking.py  forbid_core_normalization.py  forbid_generated_artifacts.py  forbid_stdlib_re.py  forbid_syspath_hacks.py  forbid_tests_init.py  require_commitall_approval.py
src/bpetite/: __init__.py  _banner.txt  _cli.py  _constants.py  _decoder.py  _encoder.py  _persistence.py  _pretokenizer.py  _tokenizer.py  _trainer.py  _ui.py
tests/: README.md  conftest.py  test_cli.py  test_persistence.py  test_pretokenizer.py  test_roundtrip.py  test_smoke.py  test_trainer.py
tests/fixtures/: tiny.txt  unicode.txt
(+1 files in other folders)
