[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bpetite"
version = "0.1.0"
description = "Deterministic byte-level BPE tokenizer."
requires-python = ">=3.12"
dependencies = ["regex", "rich>=13.0"]

[project.scripts]
bpetite = "bpetite._cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bpetite"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "tiktoken",
    "types-regex",
]
docs = [
    "markdown-it-py",
    "mdit-py-plugins",
    "pygments",
    "types-Pygments",
    "jinja2",
    "python-frontmatter",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "SIM",
    "C4",
    "PTH",
    "S",
    "A",
    "EM",
    "T20",
    "RET",
    "PERF",
    "RUF",
]
ignore = [
    "E501",
    "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["S603", "S607"]
"tests/**" = ["S101"]
"docs/site/**" = ["S603", "S607", "T201"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
files = ["src", "tests", "scripts"]
